Estructura header :dancer:
Estructura HTML con el header del website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,64 @@
-Hola Mundo!
+<!DOCTYPE html>
+<html lang="es">
+<head>
+	<meta charset="UTF-8">
+	<title>Institución Educativa Carlos Lleras Restrepo</title>
+	<meta name="description" content="El mejor Centro Educativo del Oriente de Venezuela, 20 años formando a los profesionales más competitivos">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style-icons.css">
+</head>
+<body>
+	<header>
+		<!--LOGOTIPO JUNTO A REDES SOCIALES-->
+		<div class="header-container">
+			<figure class="logo">
+				<img src="img/logo-sc.png" alt="Logotipo de la Institución">
+			</figure>
+
+			<!--BOTONES SOCIALES-->
+			<div class="socialMedia">
+				<!--TWITTER-->
+				<a href="#" target="_blank">
+					<span class="icon-iconos_twitter"><span class="path1"></span><span class="path2"></span></span>
+				</a>
+
+				<!--FACEBOOK-->
+				<a href="#" target="_blank">
+					<span class="icon-iconos_facebook"><span class="path1"></span><span class="path2"></span></span>
+				</a>
+
+				<!--GOOGLE+ -->
+				<a href="#" target="_blank">
+					<span class="icon-iconos_google"><span class="path1"></span><span class="path2"></span><span class="path3"></span></span>
+				</a>
+
+				<!--LINKEDIN-->
+				<a href="#" target="_blank">
+					<span class="icon-iconos_linkedin"></span>
+				</a>
+			</div>
+		</div>
+
+		<nav>
+			<ul>
+				<li>Sobre Nosotros</li>
+				<li>Novedades</li>
+			</ul>
+			<ul>
+				<li>Especialidades</li>
+				<li>Contacto</li>
+			</ul>
+		</nav>
+
+		<!--IMAGEN PROMOCIONAL-->
+		<section class="promocional">
+			<img src="img/promocional.jpg" alt="">
+			<div class="promocional-text">
+				<h1>Inscripciones ABIERTAS</h1>
+				<h3>Período 2016-2017 | Desde el 15 de Julio hasta el 5 de Agosto</h3>
+			</div>
+		</section>
+	</header>
+	
+</body>
+</html>
