--- a/index.html
+++ b/index.html
@@ -41,12 +41,19 @@
 
 		<nav>
 			<ul>
-				<li>Sobre Nosotros</li>
-				<li>Novedades</li>
+				<li>
+					<a href="#">Sobre Nosotros</a>
+				</li>
+				<li>
+					<a href="#">Novedades</a>
+				</li>
 			</ul>
 			<ul>
-				<li>Especialidades</li>
-				<li>Contacto</li>
+				<li>
+					<a href="#">Especialidades</a></li>
+				<li>
+					<a href="#">Contacto</a>
+				</li>
 			</ul>
 		</nav>
 
@@ -59,6 +66,39 @@
 			</div>
 		</section>
 	</header>
+
+	<!--SOBRE NOSOTROS-->
+	<section class="sobreNosotros">
+		<h2>20 años formando los mejores Profesionales</h2>
+		<p>Somos una institución educativa de carácter oficial que ofrece el servicio de Educación Formal en niveles de educación media académica. Ofrecemos a los estudiantes distintos tipos de especializaciones de tecnología media, logrando así formar jóvenes profesionales altamente capacitados para el ambito laboral. Además se han implementado los programas de Aceleración del Aprendizaje y Círculos de Aprendizaje. </p>
+	</section>
+
+	<!--NOVEDADES-->
+	<section class="novedades">
+		<div class="title-section">
+			<h4>Novedades</h4>
+		</div>
+		
+		<div class="novedades-item">
+			<!--NOTICIA 1-->
+			<div class="item">
+				<h2>Inscripciones 2016-2017</h2>
+				<p>Participamos a la comunidad en General que el proceso de inscripciones correspondientes al años escolar 2016-2017 será realizado desde el 20 de Julio hasta el 5 Agosto. Luego del periodo vacacioneal, entre el 01 y 18 de Septiembre del presente año.</p>
+			</div>
+
+			<!--NOTICIA 2-->
+			<div class="item">
+				<h2>Información de interés</h2>
+				<p>Participamos a nuestra comunidad estudiantil como a padres y representantes que el día Lunes, 22 de Febrero del presente año estaremos presetando los proyectos estudiantiles de los estudiantes de 6to año de Informática.</p>
+			</div>
+
+			<!--NOTICIA 3-->
+			<div class="item">
+				<h2>Planificando INSCRIPCIONES</h2>
+				<p>Para el año escolar 2016-2017 estaremos ofertando un total de 260 cupos por cada año del ciclo de educación media. De igual manera notificamos que los días para las inscripciones han sido pospuesto. Pronto estaremos avisando.</p>
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
