--- a/index.html
+++ b/index.html
@@ -99,6 +99,70 @@
 			</div>
 		</div>
 	</section>
+
+	<!--ESPECIALIDADES-->
+	<section class="novedades">
+		<div class="title-section">
+			<h4>Especialidades</h4>
+		</div>
+		
+		<div class="novedades-item">
+			<!--TECNICO MEDIO EN CONTABILIDAD-->
+			<div class="item">
+				<figure>
+					<img src="img/contabilidad.jpg" alt="">
+				</figure>
+				<div class="item-body">
+					<h3>Técnico Medio en Contabilidad</h3>
+					<p>Se desempeña eficientemente como miembro de un equipo interdisciplinario que contribuye a facilitar el diagnóstico financiero general de una industria que permita la acción autorreguladora </p>
+				</div>				
+			</div>
+
+			<!--TECNICO MEDIO EN ADMINISTRACION-->
+			<div class="item">
+				<figure>
+					<img src="img/administracion.jpg" alt="">
+				</figure>
+				<div class="item-body">
+					<h3>Técnico Medio en Administración</h3>
+					<p>Estudia y analiza los problemas organizacionales y funcionales de la empresa, para ofrecer alternativas que faciliten la toma de decisiones y obtener un elevado rendimiento</p>
+				</div>				
+			</div>
+
+			<!--TECNICO MEDIO EN MERCADEO-->
+			<div class="item">
+				<figure>
+					<img src="img/mercadeo.jpg" alt="">
+				</figure>
+				<div class="item-body">
+					<h3>Técnico Medio en Mercadeo</h3>
+					<p>Determina el tipo de producto que debe producirse, sus precios, su disponibilidad, así como sus ventas y publicidad. En la mención publicidad, interviene en la economía de mercados</p>
+				</div>				
+			</div>
+
+			<!--TECNICO MEDIO EN INFORMATICA-->
+			<div class="item">
+				<figure>
+					<img src="img/informatica.jpg" alt="">
+				</figure>
+				<div class="item-body">
+					<h3>Técnico Medio en Informática</h3>
+					<p>Analiza, diseña y programa sistemas de computación, toma decisiones de índole administrativo, establece normas y procedimientos para los sistemas de computación</p>
+				</div>				
+			</div>
+
+			<!--TECNICO MEDIO EN TURISMO-->
+			<div class="item">
+				<figure>
+					<img src="img/turismo.jpg" alt="">
+				</figure>
+				<div class="item-body">
+					<h3>Técnico Medio en Turismo</h3>
+					<p>Ejecuta y coordina programas de turismo y promoción turística, ejerce funciones de agente de turismo. Asiste y asesora a directivos de instituciones públicas y privadas</p>
+				</div>				
+			</div>
+		</div>
+	</section>
 	
 </body>
 </html>
