Estructura HTML final
-Especialidades
-Google Maps
-Footer

--- a/index.html
+++ b/index.html
@@ -163,6 +163,37 @@
 			</div>
 		</div>
 	</section>
+
+	<!--GOOGLE MAPS Y FORMULARIO DE CONTACTO-->
+	<section class="googlemaps">
+		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6598.24581818659!2d-64.16411211067064!3d10.473806027459633!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1456022304623" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+		<!--FORMULARIO-->
+		<div class="googlemaps-container">
+			<div class="googlemaps-title">
+				<figure>
+					<img src="img/logo-sc.png" alt="">
+				</figure>
+				<div class="google-text">
+					<span>Tlf: (0293) 458.2667</span>
+					<span>Informacion@iecarloslleras.com</span>
+				</div>
+			</div>
+			<form action="">
+				<span>¡Quiero enviar un correo!</span>
+				<input type="text" placeholder="Nombre">
+				<input type="email" placeholder="Correo Electrónico">
+				<textarea name="textarea" cols="30" rows="10" placeholder="Mensaje"></textarea>
+				<div class="submit">
+					<input type="submit" value="Enviar">
+				</div>
+			</form>
+		</div>
+	</section>
+
+	<footer>
+		<h6>Institución Educativa Carlos Lleras Restrepo - Todos los derechos reservados - 2016</h6>
+	</footer>
 	
 </body>
 </html>
