--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>Institución Educativa Carlos Lleras Restrepo</title>
 	<meta name="description" content="El mejor Centro Educativo del Oriente de Venezuela, 20 años formando a los profesionales más competitivos">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/style-icons.css">
 </head>
 <body>
 	<header>
@@ -40,6 +39,7 @@
 		</div>
 
 		<nav>
+			<!--LEFT-->
 			<ul>
 				<li>
 					<a href="#">Sobre Nosotros</a>
@@ -48,6 +48,8 @@
 					<a href="#">Novedades</a>
 				</li>
 			</ul>
+
+			<!--RIGHT-->
 			<ul>
 				<li>
 					<a href="#">Especialidades</a></li>
@@ -166,7 +168,7 @@
 
 	<!--GOOGLE MAPS Y FORMULARIO DE CONTACTO-->
 	<section class="googlemaps">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6598.24581818659!2d-64.16411211067064!3d10.473806027459633!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1456022304623" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d4665.6494366714705!2d-64.16490000223398!3d10.474797440127267!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sve!4v1455923956533" width="100%" height="100% " frameborder="0" style="border:0" allowfullscreen></iframe>
 
 		<!--FORMULARIO-->
 		<div class="googlemaps-container">
