--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<!--NOVEDADES-->
 	<section class="novedades">
 		<div class="title-section">
-			<h4>Novedades</h4>
+			<h4 id="novedades">Novedades</h4>
 		</div>
 		
 		<div class="novedades-item">
@@ -105,7 +105,7 @@
 	<!--ESPECIALIDADES-->
 	<section class="novedades">
 		<div class="title-section">
-			<h4>Especialidades</h4>
+			<h4 id="especialidades">Especialidades</h4>
 		</div>
 		
 		<div class="novedades-item">
